@@ -3,35 +3,34 @@ package com.google.cloud.teleport.v2.neo4j.common.utils;
 
 import com.google.cloud.bigquery.Field;
 import com.google.cloud.bigquery.FieldList;
-import com.google.cloud.teleport.v2.neo4j.common.model.*;
 import com.google.cloud.teleport.v2.neo4j.common.model.enums.FragmentType;
 import com.google.cloud.teleport.v2.neo4j.common.model.enums.RoleType;
 import com.google.cloud.teleport.v2.neo4j.common.model.enums.SourceType;
 import com.google.cloud.teleport.v2.neo4j.common.model.enums.TargetType;
+import com.google.cloud.teleport.v2.neo4j.common.model.job.*;
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
+import java.util.*;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 import org.apache.beam.repackaged.core.org.apache.commons.lang3.StringUtils;
 import org.apache.beam.sdk.schemas.Schema;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.util.*;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
-
+/**
+ * Utility functions for Beam rows and schema.
+ */
 public class ModelUtils {
+    public static final String DEFAULT_STAR_QUERY = "SELECT * FROM PCOLLECTION";
+    private static final Gson gson = new GsonBuilder().setPrettyPrinting().create();
+    private static final String allowedCharactersRegex = "[^a-zA-Z0-9_]";
+    private static final String allowedCharactersRegexSpace = "[^a-zA-Z0-9_ ]";
+    private static final String alphaCharsRegex = "[^a-zA-Z]";
+    private static final Pattern variablePattern = Pattern.compile("(\\$([a-zA-Z0-9_]+))");
     private static final Logger LOG = LoggerFactory.getLogger(ModelUtils.class);
-    final static Gson gson = new GsonBuilder().setPrettyPrinting().create();
-    final public static String DEFAULT_STAR_QUERY = "SELECT * FROM PCOLLECTION";
-    final static String LEGAL_CHARS_REGEX = "[^a-zA-Z0-9_]";
-    final static String LEGAL_CHARS_REGEX_SPACE = "[^a-zA-Z0-9_ ]";
-    final static String ALPHA_CHARS_REGEX = "[^a-zA-Z]";
-    final public static String CYPHER_DELETE_ALL = "CREATE OR REPLACE DATABASE `neo4j`";
-    final public static long MAX_ROWS = 10000000000000l;
-    final static Pattern variablePattern = Pattern.compile("(\\$([a-zA-Z0-9_]+))");
 
-
-    public static Target generateDefaultTarget(Source source) throws RuntimeException {
+    public static Target generateDefaultTarget(Source source)  {
         if (source.sourceType == SourceType.text) {
             Target target = new Target();
 
@@ -39,24 +38,28 @@ public class ModelUtils {
 
             return target;
         } else {
-            LOG.info("Unhandled source type.");
+            LOG.error("Unhandled source type: "+source.sourceType);
             throw new RuntimeException("Unhandled source type: " + source.sourceType);
         }
     }
 
     public static String getRelationshipKeyField(Target target, FragmentType fragmentType) {
-        return getFirstField(target, fragmentType, List.of(RoleType.key));
+        return getFirstField(target, fragmentType, Arrays.asList(RoleType.key));
     }
 
     public static String getFirstField(Target target, FragmentType fragmentType, List<RoleType> roleTypes) {
         List<String> fields = getFields(fragmentType, roleTypes, target);
-        if (fields.size() > 0) return fields.get(0);
+        if (fields.size() > 0) {
+            return fields.get(0);
+        }
         return "";
     }
 
     public static String getFirstFieldOrConstant(Target target, FragmentType fragmentType, List<RoleType> roleTypes) {
         List<String> fieldsOrConstants = getFieldOrConstants(fragmentType, roleTypes, target);
-        if (fieldsOrConstants.size() > 0) return fieldsOrConstants.get(0);
+        if (fieldsOrConstants.size() > 0) {
+            return fieldsOrConstants.get(0);
+        }
         return "";
     }
 
@@ -211,16 +214,25 @@ public class ModelUtils {
         }
     }
 
+    public static boolean messagesContains(List<String> messages, String text) {
+        for (String msg : messages) {
+            if (msg.toUpperCase().contains(text.toUpperCase())) {
+                return true;
+            }
+        }
+        return false;
+    }
+
     public static String makeValidNeo4jIdentifier(String proposedIdString) {
-        String finalIdString = proposedIdString.replaceAll(LEGAL_CHARS_REGEX, "_").trim();
-        if (finalIdString.substring(0, 1).matches(ALPHA_CHARS_REGEX)) {
+        String finalIdString = proposedIdString.replaceAll(allowedCharactersRegex, "_").trim();
+        if (finalIdString.substring(0, 1).matches(alphaCharsRegex)) {
             finalIdString = "N" + finalIdString;
         }
         return finalIdString;
     }
 
     public static String makeValidNeo4jRelationshipIdentifier(String proposedIdString) {
-        String finalRelationshipIdString = proposedIdString.replaceAll(LEGAL_CHARS_REGEX, "_").toUpperCase().trim();
+        String finalRelationshipIdString = proposedIdString.replaceAll(allowedCharactersRegex, "_").toUpperCase().trim();
         return finalRelationshipIdString;
     }
 
@@ -251,7 +263,7 @@ public class ModelUtils {
         List<String> labels = new ArrayList<>();
         for (Mapping m : target.mappings) {
             if (m.fragmentType == entityType) {
-                if (m.labels.size()>0) {
+                if (m.labels.size() > 0) {
                     labels.addAll(m.labels);
                 } else if (m.role == RoleType.label) {
                     if (StringUtils.isNotEmpty(m.constant)) {
@@ -271,7 +283,7 @@ public class ModelUtils {
         List<String> labels = new ArrayList<>();
         for (Mapping m : target.mappings) {
             if (m.fragmentType == entityType) {
-                if (m.labels.size()>0) {
+                if (m.labels.size() > 0) {
                     labels.addAll(m.labels);
                 } else if (m.role == RoleType.label) {
                     if (StringUtils.isNotEmpty(m.constant)) {
@@ -318,19 +330,20 @@ public class ModelUtils {
         //populate the replacements map ...
         StringBuilder builder = new StringBuilder();
         int i = 0;
-        LOG.info("Replacing variable tokens: "+text);
+        LOG.info("Replacing variable tokens: " + text);
         while (matcher.find()) {
             String replacement = replacements.get(matcher.group(1));
-            builder.append(text.substring(i, matcher.start()));
-            if (replacement == null)
+            builder.append(text, i, matcher.start());
+            if (replacement == null) {
                 builder.append(matcher.group(0));
-            else
+            } else {
                 builder.append(replacement);
+            }
             i = matcher.end();
         }
-        builder.append(text.substring(i, text.length()));
-        String repacedText= builder.toString();
-        LOG.info("Before: "+text+", after: "+repacedText);
+        builder.append(text.substring(i));
+        String repacedText = builder.toString();
+        LOG.info("Before: " + text + ", after: " + repacedText);
         return repacedText;
     }
 
